<resources>
    <string name="app_name">QCard</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="required">Required!</string>

    <string name="sign_in_using_google">Sign in using Google</string>
    <string name="sign_in_using_facebook">Sign in using Facebook</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="share">Share</string>

    <string name="menu_sets">Sets</string>
    <string name="menu_cards">Cards</string>
    <string name="menu_import">Import</string>
    <string name="menu_sign_out">Sign-out</string>

    <string name="add_set">Add Set</string>
    <string name="edit_set">Edit Set</string>
    <string name="set_name">Set Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="add_category">Add Category</string>
    <string name="add_cards">Add Cards</string>
    <string name="edit_card">Edit Card</string>
    <string name="practice">Practice</string>
    <string name="pick_image">Pick Image</string>

    <string name="term">Term</string>
    <string name="image">Image</string>
    <string name="definition">Definition</string>
    <string name="add_next">Add Next</string>
    <string name="done">Done</string>
    <string name="okay">Okay</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
</resources>