<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground"
        android:minHeight="64dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingTop="8dp"
            android:textAppearance="?textAppearanceListItem"
            app:layout_constraintBottom_toTopOf="@id/tvDefinition"
            app:layout_constraintEnd_toStartOf="@id/btnRemembered"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tvDefinition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingBottom="8dp"
            android:textAppearance="?textAppearanceListItemSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnRemembered"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="@string/app_name" />

        <ImageButton
            android:id="@+id/btnRemembered"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_margin="4dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_cards"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivMoreOptions"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_outline_thumb_up_24" />

        <ImageButton
            android:id="@+id/ivMoreOptions"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_margin="4dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/term"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivTerm"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_more_vert_24" />

        <ImageView
            android:id="@+id/ivTerm"
            android:layout_width="64dp"
            android:layout_height="0dp"
            android:contentDescription="@string/term"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>