<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.QCard.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.QCard.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTerm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toStartOf="@id/ivTermImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/term"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/ivTermImage"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/term"
            app:layout_constraintBottom_toBottomOf="@id/tilTerm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tilTerm"
            app:srcCompat="@drawable/ic_baseline_image_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDefinition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toStartOf="@id/ivDefinitionImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTerm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDefinition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/definition"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/ivDefinitionImage"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/definition"
            app:layout_constraintBottom_toBottomOf="@id/tilDefinition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tilDefinition"
            app:srcCompat="@drawable/ic_baseline_image_24" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabAddNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/add_next"
            app:icon="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/done"
            app:icon="@drawable/ic_baseline_done_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fabAddNext" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>